syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

package ride.payments.v1alpha1;

message Transaction {
  // Relative resource name of the Transaction, for example, "users/user1/wallet/transactions/transaction1"
  string name = 1 [(validate.rules).string = {
                    pattern: "^users/[A-Za-z0-9_-]+/wallet/transactions/[A-Za-z0-9_-]+$",
                    ignore_empty: true
                  }];

  // The transaction amount in the smallest currency unit. **Must** be greater than 0. For example, $1.75 must be represented as 175.
  int32 amount = 2 [(validate.rules).int32.gt = 0];

  // The transaction type, **must** be either debit or credit
  Type type = 3 [(validate.rules).enum = {not_in: [0]}];

  // Output only. The timestamp when the transaction was created
  google.protobuf.Timestamp create_time = 4;

  // The transaction batch id if the transaction was created with BatchCreate.
  optional string batch_id = 5 [(validate.rules).string = {
                                  pattern: "^[A-Za-z0-9_-]+$",
                                  ignore_empty: true
                                }];
  
  Details details = 6;

  // The type of the transaction, **must** be either debit or credit.
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_DEBIT = 1;
    TYPE_CREDIT = 2;
  }

  message Details {
    // The short human understandable description of the transaction.
    string display_name = 1 [(validate.rules).string = { min_len: 1, max_len: 32 }];

    // Full description of the transaction.
    optional string description = 2 [(validate.rules).string = { max_bytes: 128, ignore_empty: true }];

    // Any type of identifier that can explain what action caused this transaction.
    string reference = 3 [(validate.rules).string.max_bytes = 128];
  }
}